--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@clerk/clerk-expo": "^2.4.3",
     "@clerk/types": "^4.39.1",
     "@expo/vector-icons": "^14.0.2",
+    "@neondatabase/serverless": "^0.10.4",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.11",
+    "expo": "~52.0.18",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -28,15 +29,15 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-secure-store": "^14.0.0",
-    "expo-splash-screen": "~0.29.13",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.4",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
